--- a/cruzzit/public/stylesheets/style.css
+++ b/cruzzit/public/stylesheets/style.css
@@ -6,3 +6,23 @@ body {
 a {
   color: #00B7FF;
 }
+
+html, body{
+  background: #2DAFA8;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+h1, h2, h3, h4, h5, h6{
+  color: #FFFFFF;
+}
+
+footer {
+  width:100%;
+  height:20px;
+  position:absolute;
+  bottom:0;
+  left:0;
+  background: transparent;
+  color: #b19cd9;
+}
