--- a/cruzzit/views/index.ejs
+++ b/cruzzit/views/index.ejs
@@ -7,6 +7,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
     <script src="app.js"></script>
     <script src="/javascripts/angularApp.js"></script>
+    <link rel="stylesheet" href="stylesheets/style.css">
     <style> .glyphicon-hand-up { cursor:pointer }</style>
   </head>
   <body ng-app="cruzzit">
